Minor IDE warnings clean up