@@ -64,7 +64,7 @@ public record ReadAndUpdateCollectionOperation(
   @Override
   public Uni<Supplier<CommandResult>> execute(
       RequestContext dataApiRequestInfo, QueryExecutor queryExecutor) {
-    final AtomicReference pageStateReference = new AtomicReference();
+    final AtomicReference<String> pageStateReference = new AtomicReference<>();
     final AtomicInteger matchedCount = new AtomicInteger(0);
     final AtomicInteger modifiedCount = new AtomicInteger(0);
     Uni<CollectionReadOperation.FindResponse> docsToUpdate =
@@ -77,16 +77,16 @@ public record ReadAndUpdateCollectionOperation(
             findResponse -> {
               pageStateReference.set(findResponse.pageState());
               final List<ReadDocument> docs = findResponse.docs();
-              if (upsert() && docs.size() == 0 && matchedCount.get() == 0) {
+              if (upsert() && docs.isEmpty() && matchedCount.get() == 0) {
                 // TODO: creating the new document here, with the defaults from the filter, makes it
-                // harder because
-                // the new document created here may nto have an _id if there was none in the
-                // filter. A better approach
-                // may be to have the documentUpdater create the upsert document totally in once
-                // place. Currently creating the
-                // upsert document is in multiple places. To do this we would create
-                // UpdateOperations from the filter and
-                // give them to the document updated when it is created.
+                // harder because the new document created here may nto have an _id if there was
+                // none
+                // in the filter. A better approach may be to have the documentUpdater create
+                // the upsert document totally in once place.
+                // Currently creating to upsert document is in multiple places. To do this we would
+                // create
+                // UpdateOperations from the filter and give them to the document updated when it is
+                // created.
                 return Multi.createFrom().item(findCollectionOperation().getNewDocument());
               } else {
                 matchedCount.addAndGet(docs.size());
@@ -156,7 +156,7 @@ public record ReadAndUpdateCollectionOperation(
                   modifiedCount.get(),
                   updates,
                   returnDocumentInResponse(),
-                  (String) pageStateReference.get());
+                  pageStateReference.get());
             });
   }
 
@@ -213,7 +213,8 @@ public record ReadAndUpdateCollectionOperation(
                                     vectorizedDocumentUpdaterResponse.document(),
                                     readDocument
                                         .txnId()
-                                        .orElse(null)); // will be empty when this is a upsert'd doc
+                                        .orElse(
+                                            null)); // will be empty when this is an upserted doc
 
                         // Have to do this because shredder adds _id field to the document if it
                         // doesn't exist
@@ -287,7 +288,7 @@ public record ReadAndUpdateCollectionOperation(
 
   // NOTE: This method is used in the test code (to avoid having to copy query Strings verbatim),
   // so it should not be changed to private or non-static
-  protected static String buildUpdateQuery(
+  static String buildUpdateQuery(
       String keyspaceName, String collectionName, boolean vectorEnabled, boolean lexicalEnabled) {
     StringBuilder updateQuery = new StringBuilder(200);
     updateQuery
@@ -353,13 +354,7 @@ IF tx_id = ?
     return SimpleStatement.newInstance(builtQuery, positional.toArray(new Object[0]));
   }
 
-  /**
-   * Utility method to read the document again, in case of lwt error
-   *
-   * @param queryExecutor
-   * @param prevReadDoc
-   * @return
-   */
+  /** Utility method to read the document again, in case of lwt error */
   private Uni<ReadDocument> readDocumentAgain(
       RequestContext dataApiRequestInfo, QueryExecutor queryExecutor, ReadDocument prevReadDoc) {
     return findCollectionOperation()
@@ -372,11 +367,10 @@ IF tx_id = ?
         .transform(
             response -> {
               if (!response.docs().isEmpty()) {
-                return response.docs().get(0);
-              } else {
-                // If data changed and doesn't satisfy filter conditions
-                return null;
+                return response.docs().getFirst();
               }
+              // If data changed and doesn't satisfy filter conditions
+              return null;
             });
   }
 
